--- a/testcafe/package.json
+++ b/testcafe/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "testcafe chrome:headless tests"
+    "test": "testcafe edge tests"
   },
   "keywords": [],
   "author": "",
